# narrative-tool

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: sample_posts.jsonl
docs/: demo.md
docs/examples/: ideas.md  report.json
narrativelens/: cli.py  detect.py  ideas.py  io.py
